[package]
name = "rust-invaders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
rand = "0.8"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable max optimizations for dependencies, excluding rust-invaders code:
[profile.dev.package."*"]
opt-level = 3
